# OCR-pdf-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf_ocr_md/: discovery.py  interactive_tui.py  main.py  ollama_client.py  pdf_extract.py  smart_trigger.py  transform.py  tui.py  writer.py
